<resources>
    <string name="app_name">Ktista</string>
    <string name="title_feed">Feed</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>

    <string name="cd_post_photo">post_photo</string>
    <string name="cd_post_like">like</string>
    <string name="cd_post_dislike">dislike</string>
    <string name="cd_post_comments">comment</string>

    <string name="dialog_change">Change</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title">Change password</string>
    <string name="dialog_old_password">Old password</string>
    <string name="dialog_new_password">New password</string>
    <string name="dialog_confirm_password">Confirm password</string>

    <string name="login_nickname">Nickname</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_greetings">Welcome</string>

    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_email">Email</string>
    <string name="registration_nickname">Nickname</string>
    <string name="registration_sign_in">Sign in</string>
    <string name="registration_sign_up">Sign up</string>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="description_add_post">Your description…</string>
    <string name="description_title_add_post"><b>Description</b></string>

    <string name="add_post_image_stub">Your image</string>

    <string name="title_add_post">add post</string>
    <string name="title_new_post">Done</string>

    <string name="title_save_settings">Save settings</string>

    <string name="profile_followings">Followings</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_posts">Posts</string>
    <string name="Follow">Follow</string>
    <string name="show_comments">Show comments</string>

    <string name="registration_button_progress">Wait</string>
    <string name="settings_user_info">Info</string>
    <string name="settings_confidential">Confidential</string>
    <string name="settings_change">Change</string>
    <string name="settings_photo">Photo</string>

    <string name="dialog_take_photo">Take photo</string>
    <string name="dialog_select_photo">Choose from gallery</string>
    <string name="dialog_exit">Exit</string>
</resources>