<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="15dp"
    android:paddingVertical="12dp"
    tools:showIn="@layout/fragment_post">


    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="@dimen/post_icon_size"
        android:layout_height="@dimen/post_icon_size"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/cd_post_like"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/tv_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:maxLength="6"
        android:maxLines="1"
        android:text="13434343"
        android:textColor="@color/color_6"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/iv_dislike"
        android:layout_width="@dimen/post_icon_size"
        android:layout_height="@dimen/post_icon_size"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/cd_post_dislike"
        app:srcCompat="@drawable/ic_dislike" />

    <TextView
        android:id="@+id/tv_dislike_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:maxLength="6"
        android:maxLines="1"
        android:text="13434343"
        android:textColor="@color/color_6"
        android:textSize="@dimen/base_feed_text_size" />

    <ImageView
        android:id="@+id/iv_comments"
        android:layout_width="@dimen/post_icon_size"
        android:layout_height="@dimen/post_icon_size"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/cd_post_comments"
        app:srcCompat="@drawable/ic_comment" />

    <TextView
        android:id="@+id/tv_comments_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:maxLength="6"
        android:maxLines="1"
        android:text="13434343"
        android:textColor="@color/color_6"
        android:textSize="@dimen/base_feed_text_size" />

</LinearLayout>




